# trader

./: .gitignore  README.md  main.py  manage.py  requirements.txt  runtime_config.py  weixin_notifier.py
ctp_native/: bus.py  gateway.py
dashboard/: settings.py
native/ctp_bridge/: CMakeLists.txt  README.md
native/ctp_bridge/api/win/: error.xml
native/ctp_bridge/src/: py_module.cpp
panel/: const.py  models.py  views.py
panel/migrations/: 0001_initial.py
strategy/: __init__.py  base_strategy.py  brother2.py
test/: test_ctp.py
utils/: __init__.py  read_config.py
utils/model/: kronos.py
